Added regression tests

--- a/docs/development/architecture.mdx
+++ b/docs/development/architecture.mdx
@@ -95,7 +95,7 @@ modalities/
 
 #### Sequence Management
  
-This Handles the extraction of BDIS metadata (e.g. asl.json) from DICOM for vendors and organization implementation of modalities
+This Handles the extraction of BIDS metadata (e.g. asl.json) from DICOM for vendors and organization implementation of modalities
 
 ```
 sequences/
