--- a/docs/user-guide/quick-start.mdx
+++ b/docs/user-guide/quick-start.mdx
@@ -58,7 +58,7 @@ If you have DICOM files:
    - Or drag and drop files directly
 
 2. **Select Data Type**:
-   - Choose "BDIS" for BIDS format
+   - Choose "BIDS" for BIDS format
    - Choose "DICOM" for DICOM files
 
 3. **Select Modality**:
